removed some un essential file

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -134,7 +134,7 @@ body {
 }
 
 .footer-section .btn {
-    background-color: #00ffcc;
+    background-color: #03c09ad7;
     color: #ffffff;
     border: none;
     padding: 10px 20px;
