--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -7,14 +7,16 @@ a {
 li {
     list-style: none;
 }
-body{
+
+body {
     font-family: 'Outfit', serif;
 }
-.wrapper{
+
+.wrapper {
     display: flex;
 }
 
-.main{
+.main {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -22,14 +24,63 @@ body{
     overflow: hidden;
     transition: all 0.25s ease-in-out;
     background-color: #fff;
-
 }
 
-#sidebar{
+#sidebar {
     width: 90px;
     min-width: 90px;
     transition: all 0.25s ease-in-out;
     background-color: #0b0f19;
     display: flex;
     flex-direction: column;
+}
+
+#sidebar.expand {
+    width: 260px;
+    min-width: 260px;
+}
+
+#sidebar .sidebar-logo {
+    display: block;
+    color: white;
+}
+
+#sidebar:not(.expand) .sidebar-logo {
+    display: none;
+}
+
+.toggle-btn {
+    width: 30px;
+    height: 30px;
+    color: white;
+    border-radius: 0.425rem;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #323c55;
+    border: none;
+}
+.toggle-btn i{
+    color: white;
+
+}
+#sidebar.expand .sidebar-logo{
+    animation: fadeln .25s ease;
+
+}
+@keyframes fadeln {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        }
+}
+
+.sidebar-logo a{
+    color: #fff;
+    font-size: 1.15rem;
+    font-weight: 600;
+    
 }
