--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Outfit:wght@100..900&display=swap');
 
+body {
+    font-family: 'Outfit', serif;
+    margin: 0;
+    padding: 0;
+}
+
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 li {
     list-style: none;
-}
-
-body {
-    font-family: 'Outfit', serif;
 }
 
 .wrapper {
@@ -22,117 +25,103 @@ body {
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
-    transition: all 0.25s ease-in-out;
     background-color: #fff;
+    transition: all 0.25s ease-in-out;
 }
 
 #sidebar {
     width: 90px;
-    min-width: 90px;
-    transition: all 0.25s ease-in-out;
     background-color: #0b0f19;
     display: flex;
     flex-direction: column;
+    transition: all 0.25s ease-in-out;
 }
 
 #sidebar.expand {
     width: 260px;
-    min-width: 260px;
 }
 
-#sidebar .sidebar-logo {
-    display: block;
+#sidebar .sidebar-logo a {
     color: white;
+    font-size: 1.15rem;
+    font-weight: 600;
 }
 
-#sidebar:not(.expand) .sidebar-logo ,
-#sidebar:not(.expand) a.sidebar-link span
- {
+#sidebar:not(.expand) .sidebar-logo,
+#sidebar:not(.expand) .sidebar-link span {
     display: none;
 }
 
 .toggle-btn {
     width: 30px;
     height: 30px;
-    color: white;
-    border-radius: 0.425rem;
-    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #323c55;
+    color: white;
     border: none;
-}
-.toggle-btn i{
-    color: white;
-
-}
-#sidebar.expand .sidebar-logo ,
-#sidebar.expand a.sidebar-link span{
-    animation: fadeln .25s ease;
-
-}
-@keyframes fadeln {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-        }
+    border-radius: 0.425rem;
 }
 
-.sidebar-logo a{
-    color: #fff;
-    font-size: 1.15rem;
-    font-weight: 600;
-    
-}
-
-.sidebar-nav{
+.sidebar-nav {
     padding: 0.7rem;
-    flex: 11 auto;
-    z-index: 10;
+    flex-grow: 1;
 }
-a.sidebar-link{
-    padding: .625rem 1.625rem;
+
+.sidebar-link {
+    padding: 0.625rem 1.625rem;
     color: white;
+    font-weight: 700;
     display: block;
     white-space: nowrap;
-    font-weight: 700;
     border-left: 3px solid transparent;
-    }
+}
 
-.sidebar-link i,
-.dropdown-item i   {
-   font-size: 1.1rem;
-   margin-right: 0.75rem;
-    
+.sidebar-link i {
+    font-size: 1.1rem;
+    margin-right: 0.75rem;
 }
-a.sidebar-link:hover{
-    background-color: rgba(255, 255, 255, .075);
-    border-left: 3px solid #3b7ddd;    
+
+.sidebar-link:hover {
+    background-color: rgba(255, 255, 255, 0.075);
+    border-left: 3px solid #3b7ddd;
 }
-.sidebar-copyright{
+
+.sidebar-footer {
+    padding: 1rem;
+}
+
+.sidebar-footer a {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
+.sidebar-footer i {
+    margin-right: 0.5rem;
+    font-size: 1.25rem;
+}
+
+.sidebar-copyright {
     color: #f4f1f8;
+    font-size: 0.85rem;
+    text-align: center;
 }
 
-.sidebar-item{
-    position: relative;
-
-}
-#sidebar:not(.expand) .sidebar-item .sidebar-dropdown{
+.sidebar-dropdown a.sidebar-link::before{
+    content: "";
+    height: 0.125rem;
+    width: 0.325rem;
+    background-color: #ffffff80;
     position: absolute;
-    top: 0;
-    left: 90px;
-    background-color: #0e2238;
-    padding: 0;
-    
-    min-width: 15rem;
-    display: none;
+    left: 1.5rem;
+    top: 50%;
+    transform: translateY(-50%);transform: all 0.5s;
 }
-#sidebar:not(.expand) .sidebar-item:hover .has-dropdown +.sidebar-dropdown{
-    display: block;
-    max-height: 15rem;
-    width: 100%;
-    opacity: 1;
+.sidebar-dropdown a.sidebar-link::after{
+    background: transparent ;
+    border-left: 3px solid transparent;
+    padding: 3.5rem;
+    color: #7277f2;
 }
