--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -20,11 +20,10 @@ li {
 }
 
 .main {
+    flex: 1;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
     background-color: #fff;
     transition: all 0.25s ease-in-out;
 }
@@ -109,18 +108,25 @@ li {
     text-align: center;
 }
 
-/* navbar styling */
 .navbar {
-    background-color: #f2f8fc;
-    box-shadow: 0 0 2rem 0 rgba(33, 37, 41, 0.1);
+    background-color: #f4f1f8;
+    box-shadow: 0 0 2rem 0 rgba(33, 37, 41, 0.3);
 }
 
-.navbar-expand .navbar-collapse{
+.navbar-expand .navbar-collapse {
     min-width: 200px;
 }
 
-.avatar{
-   
-   height: 40px;
-   width: 40px;
+.avatar {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
+.form-control{
+    box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.2);
+}
+.text-center{
+    margin-top: 7px;
+
 }
