--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -195,6 +195,9 @@ button.btn:hover {
     border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+
+
 
 }
 .add-btn:hover{
