--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -206,3 +206,44 @@ button.btn:hover {
 
 
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 4px 0;
+    font-size: 18px;
+    text-align: left;
+}
+
+table thead {
+    background-color: #3b7ddd;
+    color: white;
+}
+
+table th, table td {
+    padding: 12px 15px;
+}
+
+table tr:nth-child(even) {
+    background-color: #f4f1f8;
+}
+
+table tr:hover {
+    background-color: #e6f7ff;
+}
+
+.table-dark th {
+    background-color: #2b5db1;
+    color: white;
+}
+
+button.btn-sm {
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 0 5px;
+}
+
+button.btn-sm:hover {
+    opacity: 0.9;
+}
+
